Написал вторую страницу.

--- a/catalog.html
+++ b/catalog.html
@@ -218,7 +218,9 @@
                       </a>
                     </p>
                   </div>
-                  <p class="found-hotels-list__rating">Рейтинг: 8,5</p>
+                  <p class="found-hotels-list__rating found-hotels-list__rating_four-star">
+                    Рейтинг: 8,5
+                  </p>
                 </li>
                 <li class="found-hotels-list__item">
                   <p class="found-hotels-list__image">
@@ -229,8 +231,8 @@
                       Desert Quail Inn
                     </a>
                     <div class="found-hotels-list__desc">
-                      <p class="found-hotels-list__text">Гостиница</p>
-                      <p class="found-hotels-list__text">От 4000 р.</p>
+                      <p class="found-hotels-list__text">Мотель</p>
+                      <p class="found-hotels-list__text">От 3000 р.</p>
                     </div>
                     <p class="found-hotels-list__column-reserve">
                       <a class="button found-hotels-list__details-button" href="#">
@@ -241,7 +243,9 @@
                       </a>
                     </p>
                   </div>
-                  <p class="found-hotels-list__rating">Рейтинг: 8,9</p>
+                  <p class="found-hotels-list__rating found-hotels-list__rating_three-star">
+                    Рейтинг: 8,9
+                  </p>
                 </li>
                 <li class="found-hotels-list__item">
                   <p class="found-hotels-list__image">
@@ -264,7 +268,7 @@
                       </a>
                     </p>
                   </div>
-                  <p class="found-hotels-list__rating">Рейтинг: 9,2</p>
+                  <p class="found-hotels-list__rating found-hotels-list__rating_three-two">Рейтинг: 9,2</p>
                 </li>
               </ul>
             </section>
