--- a/catalog.html
+++ b/catalog.html
@@ -108,7 +108,7 @@
                             </p>
 
                             <p class="search-hotels__control-right">
-                              <label class="search-hotels__form-text" for="prior">До
+                              <label for="prior">До
                                 <input class="search-hotels__form-field" type="text" value="3000" id="prior">
                               </label>
                             </p>
