--- a/catalog.html
+++ b/catalog.html
@@ -115,12 +115,12 @@
                           </div>
                           <div class="column-controls-button">
                             <div class="search-hotels__scale"></div>
-                            <div class="search-hotels__button-control search-hotels__control_min-price">
-                              <span class="visually-hidden">Переключатель минимальной цены</span>
-                            </div>
-                            <div class="search-hotels__button-control search-hotels__control_max-price">
-                              <span class="visually-hidden">Переключатель минимальной цены</span>
-                            </div>
+                            <button type="button" class="search-hotels__button-control search-hotels__control_min-price">
+                              <span class="visually-hidden">Минимальная цена</span>
+                            </button>
+                            <button class="search-hotels__button-control search-hotels__control_max-price">
+                              <span class="visually-hidden">Максимальная цена</span>
+                            </button>
                           </div>
                           <button class="search-hotels-form-button button" type="submit">Показать</button>
                       </fieldset>
