Правки по пиксель перфикт

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <div class="reservation__column">
             <p class="reservation__lead">Заинтересовались?</p>
             <p class="reservation__excerpt">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="button reservation__button-search" href="hotels.html">Поиск гостиницы в седоне</a>
+            <a class="button reservation__button-search" href="catalog.html">Поиск гостиницы в седоне</a>
           </div>
 
           <form class="active modal modal-form" action="#" method="post">
