--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <div class="position-footer-column">
       <section class="main-map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <iframe class="main-map__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d457314.2275816832!2d-111.96913910660484!3d34.79984913560092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1522148281101" width="1200" height="593" allowfullscreen>
+        <iframe class="main-map__google-map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d838788.298441216!2d-112.029971!3d34.792938!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1522160915094" width="1200" height="593"  allowfullscreen>
         </iframe>
         <img class="main-map__image" src="img/map.png" width="1200" height="593" alt="Координаты города Седона">
       </section>
