--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Седона</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="main-body">
@@ -59,7 +59,7 @@
               </p>
             </div>
             <div class="features-list__column features-list__column_size_m">
-              <img class="features-list__image" src="img/city.jpg" width="800" height="500" alt="Город Седона">
+              <img class="features-list__image" src="img/city2.jpg" width="800" height="256" alt="Город Седона">
             </div>
           </li>
 
@@ -91,7 +91,7 @@
               </p>
             </div>
             <div class="features-list__column features-list__column_size_m features-list__column_order">
-              <img class="features-list__image" src="img/canyon.jpg" width="800" height="256" alt="Мост дьявола">
+              <img class="features-list__image" src="img/canyon2.jpg" width="800" height="256" alt="Мост дьявола">
             </div>
           </li>
 
@@ -187,7 +187,7 @@
     <div class="position-footer-column">
       <section class="main-map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <iframe class="main-map__google-map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d838788.298441216!2d-112.029971!3d34.792938!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1522160915094" width="1200" height="593"  allowfullscreen>
+        <iframe class="main-map__google-map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d838788.298441216!2d-112.029971!3d34.792938!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1522160915094" width="100%" height="593"  allowfullscreen>
         </iframe>
         <img class="main-map__image" src="img/map.png" width="1200" height="593" alt="Координаты города Седона">
       </section>
