Внес изменения по резиновой вертске.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
           <li class="features-list__item features-list__item_blue features-list__item_text">
             <div class="features-list__column  features-list__column_text">
-              <h3 class="features-list__title features-list__text_white">
+              <h3 class="features-list__title features-list__title_size-padding-m features-list__text_white">
                 Там есть<br> мост дьявола
               </h3>
               <span class="features-list__number features-list__text_white">
@@ -183,11 +183,13 @@
             </button>
         </form>
       </section>
+
+
     </main>
     <div class="position-footer-column">
       <section class="main-map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <iframe class="main-map__google-map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d838788.298441216!2d-112.029971!3d34.792938!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1522160915094" width="100%" height="593"  allowfullscreen>
+        <iframe class="main-map__google-map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d838788.298441216!2d-112.029971!3d34.792938!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1522160915094" width="1200" height="593"  allowfullscreen>
         </iframe>
         <img class="main-map__image" src="img/map.png" width="1200" height="593" alt="Координаты города Седона">
       </section>
